<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_new_session"
        android:title="@string/new_session"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_run_file"
        android:title="@string/run_file"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_paste"
        android:title="@string/paste"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_copy_output"
        android:title="@string/action_copy_output"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear"
        android:title="@string/action_clear"
        app:showAsAction="never" />
</menu>
